[tool.poetry]
name = "XAgent-doc"
version = "0.1.0"
description = ""
authors = ["XAgent <xagentteam@gmail.com>"]
license = "GPLV2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinx-copybutton = "^0.5.2"
myst-parser = "^2.0.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"